--- a/sass/components/_tag-selector.scss
+++ b/sass/components/_tag-selector.scss
@@ -27,7 +27,7 @@
           }
         }
       }
-      &[data-tag="device"] {
+      &[data-tag="appliance"] {
         background-color: #68d9a4;
         .header {
           &__tag {
