--- a/css/style.css
+++ b/css/style.css
@@ -154,6 +154,8 @@ main.active {
   width: fit-content;
   max-width: 52%;
   height: fit-content;
+  max-height: 460px;
+  overflow: auto;
   margin: 0 50px 60px 0;
 }
 .header__tag-selector.active {
