--- a/sass/components/_tag-selector.scss
+++ b/sass/components/_tag-selector.scss
@@ -7,6 +7,8 @@
       width: fit-content;
       max-width: 52%;
       height: fit-content;
+      max-height: 460px;
+      overflow: auto;
       margin: 0 50px 60px 0;
       &.active {
         margin: 0 50px 120px 0;
