--- a/css/style.css
+++ b/css/style.css
@@ -155,32 +155,35 @@ main.active {
   max-width: 52%;
   height: fit-content;
   max-height: 460px;
-  overflow: auto;
+  overflow: hidden;
   margin: 0 50px 60px 0;
+}
+.header__tag-selector:hover {
+  overflow-y: auto;
 }
 .header__tag-selector.active {
   margin: 0 50px 120px 0;
 }
-.header__tag-selector[data-tag=ingredient] {
+.header__tag-selector[data-tag=ingredients] {
   background-color: #3282f7;
 }
-.header__tag-selector[data-tag=ingredient] .header__tag-choice--display.active {
+.header__tag-selector[data-tag=ingredients] .header__tag-choice--display.active {
   background-color: #3282f7;
   border-radius: 4px;
   display: block;
 }
-.header__tag-selector[data-tag=appliance] {
+.header__tag-selector[data-tag=appareils] {
   background-color: #68d9a4;
 }
-.header__tag-selector[data-tag=appliance] .header__tag-choice--display.active {
+.header__tag-selector[data-tag=appareils] .header__tag-choice--display.active {
   background-color: #68d9a4;
   border-radius: 4px;
   display: block;
 }
-.header__tag-selector[data-tag=ustensil] {
+.header__tag-selector[data-tag=ustensiles] {
   background-color: #ed6454;
 }
-.header__tag-selector[data-tag=ustensil] .header__tag-choice--display.active {
+.header__tag-selector[data-tag=ustensiles] .header__tag-choice--display.active {
   background-color: #ed6454;
   border-radius: 4px;
   display: block;
@@ -192,6 +195,7 @@ main.active {
   padding: 31px 28px;
 }
 .header__tag-researcher p {
+  text-transform: capitalize;
   margin: 0 45px 0 0;
 }
 .header__tag-researcher p.active {
