--- a/sass/components/_tag-selector.scss
+++ b/sass/components/_tag-selector.scss
@@ -111,6 +111,7 @@
         display: none;
       }
       & p {
+        text-transform: capitalize;
         flex: 0 0 33.2%;
         margin: 0 0 12px 0;
       }
