--- a/css/style.css
+++ b/css/style.css
@@ -206,8 +206,10 @@ main.active {
   padding: 31px 28px;
 }
 .header__tag-researcher p {
-  text-transform: capitalize;
   margin: 0 45px 0 0;
+}
+.header__tag-researcher p:first-letter {
+  text-transform: capitalize;
 }
 .header__tag-researcher p.active {
   display: none;
@@ -246,9 +248,11 @@ main.active {
   display: none;
 }
 .header__tag-choice p {
-  text-transform: capitalize;
   flex: 0 0 33.2%;
   margin: 0 0 12px 0;
+}
+.header__tag-choice p:first-letter {
+  text-transform: capitalize;
 }
 
 .header__tag {
