--- a/sass/components/_tag.scss
+++ b/sass/components/_tag.scss
@@ -16,13 +16,13 @@
       height: 26px;
       fill: white;
     }
-    &[data-tag="ingredient"] {
+    &[data-tag="ingredients"] {
       background-color: #3282f7;
     }
-    &[data-tag="device"] {
+    &[data-tag="appareils"] {
       background-color: #68d9a4;
     }
-    &[data-tag="ustensil"] {
+    &[data-tag="ustensiles"] {
       background-color: #ed6454;
     }
   }
