--- a/sass/components/_tag.scss
+++ b/sass/components/_tag.scss
@@ -3,17 +3,17 @@
     display: flex;
     align-items: center;
     border-radius: 4px;
-    margin: 0 25px 0 0;
-    padding: 12px;
+    margin: 0 25px 25px 0;
+    padding: 12px 16px;
     width: fit-content;
     color: white;
     & p {
       margin: 0 12px;
     }
     & svg {
-      margin: 0 5px;
-      width: 26px;
-      height: 26px;
+      margin: 0 4px;
+      width: 30px;
+      height: 24px;
       fill: white;
     }
     &[data-tag="ingredients"] {
