--- a/sass/components/_tag.scss
+++ b/sass/components/_tag.scss
@@ -15,6 +15,7 @@
       width: 30px;
       height: 24px;
       fill: white;
+      cursor: pointer;
     }
     &[data-tag="ingredients"] {
       background-color: #3282f7;
