--- a/sass/components/_tag.scss
+++ b/sass/components/_tag.scss
@@ -3,26 +3,30 @@
     display: flex;
     align-items: center;
     border-radius: 4px;
-    margin: 0 25px 0 0;
-    padding: 12px;
+    margin: 0 25px 25px 0;
+    padding: 12px 16px;
     width: fit-content;
     color: white;
     & p {
       margin: 0 12px;
+      &:first-letter {
+        text-transform: capitalize;
+      }
     }
     & svg {
-      margin: 0 5px;
-      width: 26px;
-      height: 26px;
+      margin: 0 4px;
+      width: 30px;
+      height: 24px;
       fill: white;
+      cursor: pointer;
     }
-    &[data-tag="ingredient"] {
+    &[data-tag="ingredients"] {
       background-color: #3282f7;
     }
-    &[data-tag="device"] {
+    &[data-tag="appareils"] {
       background-color: #68d9a4;
     }
-    &[data-tag="ustensil"] {
+    &[data-tag="ustensiles"] {
       background-color: #ed6454;
     }
   }
