--- a/sass/components/_recipe.scss
+++ b/sass/components/_recipe.scss
@@ -64,3 +64,13 @@
     }
   }
 }
+
+@media (max-width: 425px) {
+  .main {
+    &__recipe {
+      &-caption {
+        height: fit-content;
+      }
+    }
+  }
+}
