--- a/sass/page/_homePage.scss
+++ b/sass/page/_homePage.scss
@@ -11,3 +11,27 @@
     }
   }
 }
+
+@media (max-width: 1440px) {
+  .main {
+    &__block {
+      &-recipe {
+        &-cards {
+          grid-template-columns: repeat(2, 1fr);
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 1024px) {
+  .main {
+    &__block {
+      &-recipe {
+        &-cards {
+          grid-template-columns: repeat(1, 1fr);
+        }
+      }
+    }
+  }
+}
